2004-09-15  Florian Boor  <florian.boor@kernelconcepts.de>

    * list-ui.c: Added patch by Chris Owen to add button for removing 
                 completed items.

2004-08-28  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.48 released.

2004-08-22  Phil Blundell  <pb@nexus.co.uk>

	* list-ui.c (sort_by_priority): Swap sense of comparison.
	(refresh_items): Add missing assignment of g_slist_sort return
	value.

2004-06-23  Philip Blundell  <philb@gnu.org>

	* Version 0.47 released.

2004-06-23  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add nl, ru, sr, sk, sv, wa, es.

2004-03-25  Philip Blundell  <philb@gnu.org>

	* Makefile: Version 0.46 released.

2004-03-08  Philip Blundell  <philb@gnu.org>

	* Makefile (PACKAGE_CPPFLAGS, PACKAGE_CFLAGS, PACKAGE_LDFLAGS):
	Define and use instead of CPPFLAGS, CFLAGS and LDFLAGS.

2004-02-29  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.45 released.

2004-02-29  Phil Blundell  <pb@nexus.co.uk>

	* todo-ui.c (update_categories): Rebuild categories menu since
	list may have changed.

2004-02-25  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.44 released.

2004-02-25  Phil Blundell  <pb@nexus.co.uk>

	* todo-ui.c (edit_item): Cosmetic tweaks to avoid over-wide
	dialog.

2004-02-22  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.43 released.

2004-02-22  Phil Blundell  <pb@nexus.co.uk>

	* familiar/control (Depends): Demand libtododb 0.04.

	* Makefile (CPPFLAGS, LDFLAGS): Add libgpepimc.
	* main.c (main): Call gpe_pim_categories_init.
	* todo.h (edit_item): Second arg is int, not pointer.
	* list-ui.c (selected_category): Change type to int.
	(item_do_edit): Keep in step.
	(set_category): Likewise.
	(refresh_items): Likewise.
	(categories_menu): Likewise.  Get category list from libgpepimc.
	* todo-ui.c (destroy_user_data): Remove useless conditional.
	(categories_ok, categories_cancel, do_new_category): Deleted.
	(new_category): Deleted.
	(delete_category): Deleted.
	(categories_button_press_event): Deleted.